--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,19 @@
 version: 2.1
+orbs:
+  aws-code-deploy: circleci/aws-code-deploy@2.0.0
+
 jobs:
-  build_deploy:
-    machine:
-      image: ubuntu-2004:202010-01
+  example-job:
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
     steps:
-      - checkout
-      - run:
-          name: Installing AWS CLI
-          command: |
-            sudo apt-get update
-            sudo apt install python3-pip
-            sudo pip3 install awsebcli --upgrade
-      - run: cd ./app && npm install && npm run build
-      - run: aws s3 sync ./ s3://codex-server-bucket/ --request-payer requester
+      - aws-code-deploy/push-bundle:
+          application-name: codex-server-application 
+          bundle-bucket: codex-server-bucket 
+          bundle-key: arn:aws:kms:us-east-1:951813463780:key/aed90e85-87c0-40be-933e-2036229f2df7 
 
 workflows:
-  version: 2
-  execute_bulk:
+  example-workflow:
     jobs:
-      - build_deploy
+      - example-job
