--- a/appspec.yml
+++ b/appspec.yml
@@ -19,20 +19,20 @@ hooks:
     - location: scripts/install_python_dependencies.sh
       timeout: 6000
       runas: ubuntu
-    - location: scripts/migrate.sh
-      timeout: 6000
-      runas: ubuntu
-    - location: scripts/gunicorn.sh
-      timeout: 6000
-      runas: ubuntu
-    - location: scripts/ngnix.sh
-      timeout: 6000
-      runas: ubuntu
-  ApplicationStart:
-    - location: scripts/start_application.sh
-      timeout: 6000
-      runas: ubuntu
-  ApplicationStop:
-    - location: scripts/stop_application.sh
-      timeout: 6000
-      runas: ubuntu
+#     - location: scripts/migrate.sh
+#       timeout: 6000
+#       runas: ubuntu
+#     - location: scripts/gunicorn.sh
+#       timeout: 6000
+#       runas: ubuntu
+#     - location: scripts/ngnix.sh
+#       timeout: 6000
+#       runas: ubuntu
+#   ApplicationStart:
+#     - location: scripts/start_application.sh
+#       timeout: 6000
+#       runas: ubuntu
+#   ApplicationStop:
+#     - location: scripts/stop_application.sh
+#       timeout: 6000
+#       runas: ubuntu
