--- a/nginx/codex.conf
+++ b/nginx/codex.conf
@@ -1,72 +1,15 @@
 server {
 
     listen 443 ssl;
-    server_name localhost:8000;
+    server_name 43.205.179.51   ;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        alias  /home/ubuntu/codeX/static/;
+        alias  /home/ubuntu/myprojectdir;
     }
-
+    
     location / {
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://localhost:8000;
+        include proxy_params;
+        proxy_pass http://unix:/run/gunicorn.sock;
     }
-
-    ssl_certificate /etc/letsencrypt/live/codex.smalldaytech.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/codex.smalldaytech.com/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-}
-server {}
-    listen   80;
-    server_name codex.smalldaytech.com;
-    if ($host = codex.smalldaytech.com) {
-        return 301 https://$host$request_uri;
-    }
-    proxy_set_header X-Forwarded-Proto $scheme;
-
-    #return 301 https://$server_name$request_uri;
-    #   location / {
-    #     proxy_set_header Host $http_host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_pass http://localhost:8000;
-    # }
-   # charset koi8-r
-   #access_log logs/host.access.log main;
-   location / {
-    root html;
-    index index.html index.htm;
-   }
-    #   location / {
-    #     proxy_pass http://localhost:8000;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
-            location ^~ /.well-known/acme-challenge/ {
-    default_-0[98type "text/plain";
-    root html;
-                client_max_body_size 128M;
-                proxy_read_timeout 600s;
-
-    }
-
-    # error_page 404                    /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    # 
-    error_page  500 502 503 504  /50x.html;
-    location = /50x.html {
-        root html;
-    }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-
 }
